--- a/orderApp/templates/crear_pedido.html
+++ b/orderApp/templates/crear_pedido.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>The Order</title>
 </head>
 <body>
-$END$
+    <h1>Crear Pedido</h1>
+<form method="post">
+  {% csrf_token %}
+  {{ form.as_p }}
+  <button type="submit">Realizar Pedido</button>
+</form>
 </body>
 </html>
